[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Images/meat1.png" type="Texture" id=1]
[ext_resource path="res://Game/Images/meat2.png" type="Texture" id=2]
[ext_resource path="res://Game/Food.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "meat2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "meat1",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.42741
height = 0.0

[node name="Food" type="Area2D" groups=[
"food",
]]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "meat1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RevisibleTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="StartVisibility" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="RevisibleTimer" to="." method="_on_RevisibleTimer_timeout"]
[connection signal="timeout" from="StartVisibility" to="." method="_on_StartVisibility_timeout"]
